--- a/package.json
+++ b/package.json
@@ -18,24 +18,26 @@
     "@ffmpeg/util": "^0.12.2",
     "axios": "^1.9.0",
     "next": "15.3.3",
+    "postcss": "^8.5.4",
     "react": "^19.0.0",
     "react-audio-voice-recorder": "^2.2.0",
     "react-dom": "^19.0.0",
+    "tailwindcss": "^3.4.17",
     "uuid": "^9.0.1",
     "wavesurfer.js": "^7.9.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/uuid": "^9.0.8",
+    "autoprefixer": "^10.4.21",
+    "critters": "^0.0.23",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
     "jest": "^29.7.0",
     "prettier": "^3.5.3",
-    "tailwindcss": "^4",
     "typescript": "^5"
   }
 }
